# Retele_28_Dec

./: A6_NastasaBaras_Luca.docx  LICENSE
SocialMedia/: CMakeLists.txt  Client  Client.cpp  ServerAddFriendRequest  ServerAddFriendRequest.cpp  ServerCreeateFriendRequest  ServerCreeateFriendRequest.cpp  ServerCreeateNews  ServerCreeateNews.cpp  ServerGetFriendRequests  ServerGetFriendRequests.cpp  ServerGetMessage  ServerGetMessage.cpp  ServerGetUser  ServerGetUser.cpp  ServerLogin  ServerLogin.cpp  ServerNewsGet  ServerNewsGet.cpp  ServerRegister  ServerRegister.cpp  ServerSearchNewsLogged  ServerSearchNewsLogged.cpp  ServerSearchUser  ServerSearchUser.cpp  ServerSendMessage  ServerSendMessage.cpp  testare  testare.cpp
SocialMedia/db/: InitializeDB  InitializeDB.cpp  dbRequest.h  mydb.db  testare  testare.cpp
SocialMedia/db/handler/: GlobalFunction.h  HandlerChatDB.h  HandlerFriendDB.h  HandlerFriendRequest.h  HandlerMessageDB.h  HandlerNewsDB.h  HandlerPasswordsDB.h  HandlerUserDB.h
SocialMedia/models/: CMakeLists.txt  Chat.h  Friend.h  FriendRequest.h  Message.h  News.h  Passwords.h  User.h
